fixed some spacing issues

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -31,9 +31,11 @@
   margin-bottom: 2%;
   height: 2vh;
 }
+
 h3 {
   margin-bottom: 2%;
 }
+
 h1 {
   margin-top: 0%;
   padding-top: 1%;
@@ -48,6 +50,7 @@ h1 {
   font-size: 1em;
   background-color: white;
   border-radius: 8%;
+  margin-top: 3%;
 }
 
 #submitButtonOne:hover {
@@ -60,6 +63,7 @@ h1 {
   font-size: 1em;
   background-color: white;
   border-radius: 8%;
+  margin-top: 3%;
 }
 
 #submitButtonTwo:hover {
